--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dockpack.base_goss",
-  "version": "v0.4.9",
+  "version": "0.4.10",
   "scripts": {
     "release": "release-it"
   },
